Updated the Update Virtual Servers page to allow the default PHP version and PHP execution mode to be changed on multiple servers at once.
Changed the script installer process to automatically use the correct PHP version required by the script, if available.
Fixed the PHP Support script installer to automatically setup the database connection details for version 2.2.
IMAP passwords for Usermin users are automatically updated when changed in Usermin.
---- Changes since 3.34 ----
Updated the MediaWiki script installer to version 1.9.2, and TWiki to version 4.1.1.
When a mailbox user's password is changed in other modules, it is also updated in Virtualmin's plain-text password file.
Added new pages for easily editing HTML in a virtual server's website.
---- Changes since 3.35 ----
PHP and Pear modules needed by script installers are now automatically installed when needed, if supported by the underlying operating system's update service (APT or YUM).
Added support for enabling Ruby scripts in a virtual server. This can be done on the Website Options page, with the modify-web.pl script, on the mass domain update page, and set by default in server templates. Both execution via mod_ruby and CGI scripts are supported, assuming that the required software is installed.
Updated the lookup-domain.pl script (which is called from Procmail) to communicate with a permanent server process, rather than performing all processing on its own. This will reduce the load when email to multiple recipients arrives at once.
Updated the PHProjekt and MediaWiki script installers to setup the database configuration automatically.
Changed pages with tabs and hidden sections to be usable by the mobile device theme.
Improved detection of multiple scripts being accidentally installed into the same path.
Updated DaDaBiK script installer to version 4.2.