@@ -1,8 +1,8 @@
 <header>Can configure server features?</header>
 
 This option determines if this extra administrator can manage settings related
-to this virtual server, such as its Apache configuration, DNS records and so
-on. <p>
+to this virtual server, such as its Apache configuration, DNS records,
+mailing lists, SVN configuration and so on. <p>
 
 <footer>
 
