@@ -521,3 +521,4 @@ Updated the PHProjekt and MediaWiki script installers to setup the database conf
 Changed pages with tabs and hidden sections to be usable by the mobile device theme.
 Improved detection of multiple scripts being accidentally installed into the same path.
 Updated DaDaBiK script installer to version 4.2.
+Added a button to the Edit Extra Administrator page for switching to his Webmin login without needing to know the password.
